# stock-control

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
storm/: storm_test.py  test.sh
tests/: test_optimal_policy.py  test_sim_packages.py
wheels/: inventorygyms-0.3.0-py3-none-any.whl  one_period_shortage-0.1.3-cp312-cp312-linux_x86_64.whl  optimalpolicy-0.2.4-cp39-abi3-linux_x86_64.whl
