[project]
name = "stock-control"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "gymnasium==0.29.1",
    "inventorygyms",
    "numpy==2.4.2",
    "one-period-shortage",
    "pandas==3.0.0",
    "scipy==1.17.0",
]

[tool.uv.sources]
inventorygyms = { path = "wheels/inventorygyms-0.3.0-py3-none-any.whl" }
one-period-shortage = { path = "wheels/one_period_shortage-0.1.3-cp312-cp312-linux_x86_64.whl" }


